--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/Logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -27,6 +29,10 @@
     <title>Social Media Steff</title>
   </head>
   <body>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
