--- a/public/index.html
+++ b/public/index.html
@@ -1,48 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/Logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <!-- Extracted meta information from the homepage -->
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Помагаме на бизнесите да стъпят на TikTok сцената, за да увеличат разпознаваемостта на бранда си, достигнат до нова аудитория, изградят лоялна общност, и повишат резултатите си. Social Media Steff е бутикова видео маркетинг агенция, която създава качествено видео съдържание за различни брандове с цел то да достига до правилната аудитория абсолютно органично.">
+  <!-- Facebook meta tags -->
+  <meta property="og:title" content="Social Media Steff" />
+  <meta property="og:description" content="Помагаме на бизнесите да стъпят на TikTok сцената, за да увеличат разпознаваемостта на бранда си, достигнат до нова аудитория, изградят лоялна общност, и повишат резултатите си. Social Media Steff е бутикова видео маркетинг агенция, която създава качествено видео съдържание за различни брандове с цел то да достига до правилната аудитория абсолютно органично." />
+  <meta property="og:image" content="https://socialmediasteff.com/static/media/socialMediaSteff.1ba09ec01f7b847a723b.jpg" />
+  <!-- Instagram meta tags -->
+  <meta property="instgram:title" content="Social Media Steff" />
+  <meta property="instgram:description" content="Помагаме на бизнесите да стъпят на TikTok сцената, за да увеличат разпознаваемостта на бранда си, достигнат до нова аудитория, изградят лоялна общност, и повишат резултатите си. Social Media Steff е бутикова видео маркетинг агенция, която създава качествено видео съдържание за различни брандове с цел то да достига до правилната аудитория абсолютно органично." />
+  <meta property="instgram:image" content="https://socialmediasteff.com/static/media/socialMediaSteff.1ba09ec01f7b847a723b.jpg" />
+  <!-- LinkedIn meta tags -->
+  <meta property="linkedin:title" content="Social Media Steff" />
+  <meta property="linkedin:description" content="Помагаме на бизнесите да стъпят на TikTok сцената, за да увеличат разпознаваемостта на бранда си, достигнат до нова аудитория, изградят лоялна общност, и повишат резултатите си. Social Media Steff е бутикова видео маркетинг агенция, която създава качествено видео съдържание за различни брандове с цел то да достига до правилната аудитория абсолютно органично." />
+  <meta property="linkedin:image" content="https://socialmediasteff.com/static/media/socialMediaSteff.1ba09ec01f7b847a723b.jpg" />
+  <!-- Viber meta tags -->
+  <meta property="viber:chatURI" content="Your Viber Chat URI Here" />
+  <!-- Twitter meta tags -->
+  <meta name="twitter:title" content="Social Media Steff" />
+  <meta name="twitter:description" content="Помагаме на бизнесите да стъпят на TikTok сцената, за да увеличат разпознаваемостта на бранда си, достигнат до нова аудитория, изградят лоялна общност, и повишат резултатите си. Social Media Steff е бутикова видео маркетинг агенция, която създава качествено видео съдържание за различни брандове с цел то да достига до правилната аудитория абсолютно органично." />
+  <meta name="twitter:image" content="https://socialmediasteff.com/static/media/socialMediaSteff.1ba09ec01f7b847a723b.jpg" />
+  <title>Social Media Steff</title>
+</head>
+<body>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+  <div id="root"></div>
+  <!--
+    This HTML file is a template.
+    If you open it directly in the browser, you will see an empty page.
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Logo.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    You can add webfonts, meta tags, or analytics to this file.
+    The build step will place the bundled scripts into the <body> tag.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Social Media Steff</title>
-  </head>
-  <body>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+    To begin the development, run `npm start` or `yarn start`.
+    To create a production bundle, use `npm run build` or `yarn build`.
+  -->
+</body>
 </html>
