--- a/public/index.html
+++ b/public/index.html
@@ -10,21 +10,21 @@
   <!-- Facebook meta tags -->
   <meta property="og:title" content="Social Media Steff" />
   <meta property="og:description" content="Помагаме на бизнесите да стъпят на TikTok сцената, за да увеличат разпознаваемостта на бранда си, достигнат до нова аудитория, изградят лоялна общност, и повишат резултатите си. Social Media Steff е бутикова видео маркетинг агенция, която създава качествено видео съдържание за различни брандове с цел то да достига до правилната аудитория абсолютно органично." />
-  <meta property="og:image" content="https://socialmediasteff.com/static/media/socialMediaSteff.1ba09ec01f7b847a723b.jpg" />
+  <meta property="og:image" content="https://www.socialmediasteff.com/static/media/socailMediaSteffBanner.480e518928d0551d75cb.jpg" />
   <!-- Instagram meta tags -->
   <meta property="instgram:title" content="Social Media Steff" />
   <meta property="instgram:description" content="Помагаме на бизнесите да стъпят на TikTok сцената, за да увеличат разпознаваемостта на бранда си, достигнат до нова аудитория, изградят лоялна общност, и повишат резултатите си. Social Media Steff е бутикова видео маркетинг агенция, която създава качествено видео съдържание за различни брандове с цел то да достига до правилната аудитория абсолютно органично." />
-  <meta property="instgram:image" content="https://socialmediasteff.com/static/media/socialMediaSteff.1ba09ec01f7b847a723b.jpg" />
+  <meta property="instgram:image" content="https://www.socialmediasteff.com/static/media/socailMediaSteffBanner.480e518928d0551d75cb.jpg" />
   <!-- LinkedIn meta tags -->
   <meta property="linkedin:title" content="Social Media Steff" />
   <meta property="linkedin:description" content="Помагаме на бизнесите да стъпят на TikTok сцената, за да увеличат разпознаваемостта на бранда си, достигнат до нова аудитория, изградят лоялна общност, и повишат резултатите си. Social Media Steff е бутикова видео маркетинг агенция, която създава качествено видео съдържание за различни брандове с цел то да достига до правилната аудитория абсолютно органично." />
-  <meta property="linkedin:image" content="https://socialmediasteff.com/static/media/socialMediaSteff.1ba09ec01f7b847a723b.jpg" />
+  <meta property="linkedin:image" content="https://www.socialmediasteff.com/static/media/socailMediaSteffBanner.480e518928d0551d75cb.jpg" />
   <!-- Viber meta tags -->
   <meta property="viber:chatURI" content="Your Viber Chat URI Here" />
   <!-- Twitter meta tags -->
   <meta name="twitter:title" content="Social Media Steff" />
   <meta name="twitter:description" content="Помагаме на бизнесите да стъпят на TikTok сцената, за да увеличат разпознаваемостта на бранда си, достигнат до нова аудитория, изградят лоялна общност, и повишат резултатите си. Social Media Steff е бутикова видео маркетинг агенция, която създава качествено видео съдържание за различни брандове с цел то да достига до правилната аудитория абсолютно органично." />
-  <meta name="twitter:image" content="https://socialmediasteff.com/static/media/socialMediaSteff.1ba09ec01f7b847a723b.jpg" />
+  <meta name="twitter:image" content="https://www.socialmediasteff.com/static/media/socailMediaSteffBanner.480e518928d0551d75cb.jpg" />
   <title>Social Media Steff</title>
 </head>
 <body>
