test SEO optimize

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,8 @@
   <meta name="twitter:title" content="Social Media Steff" />
   <meta name="twitter:description" content="Помагаме на бизнесите да стъпят на TikTok сцената, за да увеличат разпознаваемостта на бранда си, достигнат до нова аудитория, изградят лоялна общност, и повишат резултатите си. Social Media Steff е бутикова видео маркетинг агенция, която създава качествено видео съдържание за различни брандове с цел то да достига до правилната аудитория абсолютно органично." />
   <meta name="twitter:image" content="https://www.socialmediasteff.com/static/media/socailMediaSteffBanner.480e518928d0551d75cb.jpg" />
-  <title>Social Media Steff</title>
+  <title>ТикТок Маркетинг Агенция | Social Media Steff</title>
+
 </head>
 <body>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
