--- a/public/index.html
+++ b/public/index.html
@@ -6,24 +6,24 @@
   <!-- Extracted meta information from the homepage -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Помагаме на бизнесите да стъпят на TikTok сцената, за да увеличат разпознаваемостта на бранда си, достигнат до нова аудитория, изградят лоялна общност, и повишат резултатите си. Social Media Steff е бутикова видео маркетинг агенция, която създава качествено видео съдържание за различни брандове с цел то да достига до правилната аудитория абсолютно органично.">
+  <meta name="description" content="ТикТок агенция Social Media Steff: Помагаме на бизнеса да увеличи разпознаваемостта си, достигне нова аудитория и постигне отлични резултати с качествено видео съдържание.">
   <!-- Facebook meta tags -->
   <meta property="og:title" content="Social Media Steff" />
-  <meta property="og:description" content="Помагаме на бизнесите да стъпят на TikTok сцената, за да увеличат разпознаваемостта на бранда си, достигнат до нова аудитория, изградят лоялна общност, и повишат резултатите си. Social Media Steff е бутикова видео маркетинг агенция, която създава качествено видео съдържание за различни брандове с цел то да достига до правилната аудитория абсолютно органично." />
+  <meta property="og:description" content="ТикТок агенция Social Media Steff: Помагаме на бизнеса да увеличи разпознаваемостта си, достигне нова аудитория и постигне отлични резултати с качествено видео съдържание." />
   <meta property="og:image" content="https://www.socialmediasteff.com/static/media/socailMediaSteffBanner.480e518928d0551d75cb.jpg" />
   <!-- Instagram meta tags -->
   <meta property="instgram:title" content="Social Media Steff" />
-  <meta property="instgram:description" content="Помагаме на бизнесите да стъпят на TikTok сцената, за да увеличат разпознаваемостта на бранда си, достигнат до нова аудитория, изградят лоялна общност, и повишат резултатите си. Social Media Steff е бутикова видео маркетинг агенция, която създава качествено видео съдържание за различни брандове с цел то да достига до правилната аудитория абсолютно органично." />
+  <meta property="instgram:description" content="ТикТок агенция Social Media Steff: Помагаме на бизнеса да увеличи разпознаваемостта си, достигне нова аудитория и постигне отлични резултати с качествено видео съдържание." />
   <meta property="instgram:image" content="https://www.socialmediasteff.com/static/media/socailMediaSteffBanner.480e518928d0551d75cb.jpg" />
   <!-- LinkedIn meta tags -->
   <meta property="linkedin:title" content="Social Media Steff" />
-  <meta property="linkedin:description" content="Помагаме на бизнесите да стъпят на TikTok сцената, за да увеличат разпознаваемостта на бранда си, достигнат до нова аудитория, изградят лоялна общност, и повишат резултатите си. Social Media Steff е бутикова видео маркетинг агенция, която създава качествено видео съдържание за различни брандове с цел то да достига до правилната аудитория абсолютно органично." />
+  <meta property="linkedin:description" content="ТикТок агенция Social Media Steff: Помагаме на бизнеса да увеличи разпознаваемостта си, достигне нова аудитория и постигне отлични резултати с качествено видео съдържание." />
   <meta property="linkedin:image" content="https://www.socialmediasteff.com/static/media/socailMediaSteffBanner.480e518928d0551d75cb.jpg" />
   <!-- Viber meta tags -->
   <meta property="viber:chatURI" content="Your Viber Chat URI Here" />
   <!-- Twitter meta tags -->
   <meta name="twitter:title" content="Social Media Steff" />
-  <meta name="twitter:description" content="Помагаме на бизнесите да стъпят на TikTok сцената, за да увеличат разпознаваемостта на бранда си, достигнат до нова аудитория, изградят лоялна общност, и повишат резултатите си. Social Media Steff е бутикова видео маркетинг агенция, която създава качествено видео съдържание за различни брандове с цел то да достига до правилната аудитория абсолютно органично." />
+  <meta name="twitter:description" content="ТикТок агенция Social Media Steff: Помагаме на бизнеса да увеличи разпознаваемостта си, достигне нова аудитория и постигне отлични резултати с качествено видео съдържание." />
   <meta name="twitter:image" content="https://www.socialmediasteff.com/static/media/socailMediaSteffBanner.480e518928d0551d75cb.jpg" />
   <title>ТикТок Маркетинг Агенция | Social Media Steff</title>
 
