--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,29 @@
   <meta name="twitter:description" content="ТикТок агенция Social Media Steff: Помагаме на бизнеса да увеличи разпознаваемостта си, достигне нова аудитория и постигне отлични резултати с качествено видео съдържание." />
   <meta name="twitter:image" content="https://www.socialmediasteff.com/static/media/socailMediaSteffBanner.480e518928d0551d75cb.jpg" />
   <title>ТикТок Маркетинг Агенция | Social Media Steff</title>
+  <script type="application/ld+json">
+    {`
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Social Media Steff",
+        "url": "https://www.socialmediasteff.com",
+        "logo": "https://www.socialmediasteff.com/static/media/socailMediaSteffBanner.480e518928d0551d75cb.jpg",
+        "sameAs": [
+          "https://www.facebook.com/socialmediasteff",
+          "https://www.instagram.com/socialmediasteff",
+          "https://www.linkedin.com/company/socialmediasteff"
+        ],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+1-800-123-4567",
+          "contactType": "Customer Service",
+          "areaServed": "BG",
+          "availableLanguage": "Bulgarian"
+        }
+      }
+    `}
+  </script>
 
 </head>
 <body>
