--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <!-- Extracted meta information from the homepage -->
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="ТикТок агенция Social Media Steff: Помагаме на бизнеса да увеличи разпознаваемостта си, достигне нова аудитория и постигне отлични резултати с качествено видео съдържание.">
+  <meta name="description" content="ТикТок агенция Social Media Steff: Помагаме на бизнеса да увеличи разпознаваемостта си, достигне нова аудитория и постигне отлични резултати." />
   <!-- Facebook meta tags -->
   <meta property="og:title" content="Social Media Steff" />
   <meta property="og:description" content="ТикТок агенция Social Media Steff: Помагаме на бизнеса да увеличи разпознаваемостта си, достигне нова аудитория и постигне отлични резултати с качествено видео съдържание." />
